[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Black/BlackButton.png" type="Texture" id=1]
[ext_resource path="res://Scripts/BlackButton.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "activate",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 1 )

[node name="BlackButton" type="StaticBody2D"]
z_index = -1
collision_layer = 8192
collision_mask = 2055
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8, 8, -8, 5, -6, 4, -6, 2, -4, 0, 4, 0, 6, 2, 6, 4, 8, 5, 8, 8 )

[node name="activation" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2055

[node name="CollisionShape2D" type="CollisionShape2D" parent="activation"]
position = Vector2( 0, -1 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="activation" to="." method="_on_activation_body_entered"]
[connection signal="body_exited" from="activation" to="." method="_on_activation_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
